Windows trying to get wallet accessible after start